# FlutterImageResizer

./: .gitattributes  .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/image_resizer/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: image_resizer.dart  main.dart  native_bridge.dart  opencv_bridge.dart
lib/model/: image_resize_config.dart  image_resize_config.g.dart
lib/page/: image_options_page.dart  image_page.dart  image_settings_page.dart
lib/resizer/: image_resizer.dart  resizer_thread.dart
lib/utility/: event_notifier.dart  profile_manager.dart  setting_manager.dart
lib/widget/: options_dropdown_widget.dart  options_input_widget.dart  profile_name_input_dialog.dart  progress_dialog.dart  scroll_table.dart  tooltip_button.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  OpenCVBridge.cpp  OpenCVBridge.h
test/: widget_test.dart
tool/: macos_opencv_build_script.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
